# illumine

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
docs/: mkdocs.yml
src/lemmata/: __init__.py  chain.py  cli.py  config.py  gradio.py  tools.py
src/lemmata/langchain/: agent_executor.py  human_callback.py
tests/: __init__.py  test_chain.py  test_cli.py  test_core.py  test_sparql.py
